# Contextinator

./: .coveragerc  .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  OPTIMIZATIONS.md  PERFORMANCE_IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  README_V1.md  TECHNICAL_DESIGN.md  TEST_COMMANDS.md  TEST_FIXES.md  USAGE.md  V2_SUMMARY.md  benchmark_repos.py  benchmark_repos_fixed.py  build.sh  contex  context  docker-compose.test.yml  docker-compose.yml  examples_tools.py  pyproject.toml  pytest.ini  requirements.txt  result.json  results.json  run_tests.py  run_tests.sh  temp.txt  test_async_ingestion.py  test_benchmark.py  test_cli.sh  (+5 more)
.chunks/: chunks.json
.github/: RELEASE.md  RELEASE_PROCESS.md  RELEASING.md
.github/ISSUE_TEMPLATE/: test_failure.md
.github/workflows/: pypi.yml  release.yml  test.yml
core/: Cargo.toml
core/src/: directory.rs  lib.rs  line.rs  search.rs  types.rs
docs/: chunking.md  chunking_system_architecture.md  cli_run.md  cli_search_commands.md  parent_child_chunking_implementation_plan.md  tools.md
examples/: logger_usage.py
src/: __init__.py  chunk.py  cli.py  embed.py  lib.rs  line.rs  main.py  vectorstore.py
src/chunking/: __init__.py  ast_parser.py  ast_visualizer.py  chunk_service.py  context_builder.py  file_discovery.py  node_collector.py  splitter.py  tree_sitter_setup.py
src/config/: __init__.py  settings.py
src/contexinator/: __init__.py  cli.py
src/contexinator/chunking/: __init__.py  ast_parser.py  chunk_service.py  context_builder.py  node_collector.py
src/contexinator/config/: settings.py
src/contexinator/embedding/: embedding_service.py
src/contexinator/tools/: __init__.py  full_text_search.py  read_file.py  semantic_search.py  symbol_search.py
src/contexinator/utils/: __init__.py  output_formatter.py  progress.py  repo_utils.py  token_counter.py  toon_encoder.py
src/contexinator/vectorstore/: chroma_store.py
src/contextinator/: __init__.py  __main__.py  cli.py  cmd.tsx  rag_cli.py  tools.py
src/contextinator/chunking/: __init__.py  ast_parser.py  ast_visualizer.py  chunk_service.py  context_builder.py  file_discovery.py  node_collector.py  notebook_parser.py  splitter.py
src/contextinator/config/: __init__.py  settings.py
src/contextinator/embedding/: __init__.py  embedding_service.py
src/contextinator/ingestion/: __init__.py  async_service.py
src/contextinator/rag/: __init__.py
src/contextinator/rag/chunking/: ast_visualizer.py  context_builder.py  node_collector.py  splitter.py
src/contextinator/rag/config/: __init__.py
src/contextinator/rag/embedding/: __init__.py
src/contextinator/rag/ingestion/: async_service.py
src/contextinator/rag/tools/: repo_structure.py
src/contextinator/rag/utils/: __init__.py  exceptions.py  hash_utils.py  logger.py  output_formatter.py  progress.py  repo_utils.py  rich_help.py  token_counter.py  toon_encoder.py
src/contextinator/rag/vectorstore/: __init__.py  chroma_store.py
src/contextinator/tools/: __init__.py  cat_file.py  full_text_search.py  grep_search.py  read_file.py  regex_search.py  repo_structure.py  semantic_search.py  symbol_search.py
src/contextinator/tools_old/: prompt.txt
src/contextinator/utils/: __init__.py  exceptions.py  hash_utils.py  logger.py  output_formatter.py  progress.py  repo_utils.py  rich_help.py  token_counter.py  toon_encoder.py
src/contextinator/vectorstore/: __init__.py  async_chroma.py  chroma_store.py
src/embedding/: __init__.py  embedding_service.py
src/tools/: __init__.py  full_text_search.py  read_file.py  regex_search.py  semantic_search.py  symbol_search.py
src/utils/: __init__.py  exceptions.py  hash_utils.py  logger.py  output_formatter.py  progress.py  repo_utils.py  token_counter.py
src/vectorstore/: __init__.py  chroma_store.py
tests/: __init__.py  conftest.py  test_chunking.py  test_embedding.py  test_search_tools.py  test_vectorstore.py  test_vectorstore_new.py
tests/integration/: __init__.py  test_full_pipeline.py
