[package]
name = "contextinator"
version = "1.2.9"
edition = "2021"

[lib]
name = "contextinator_core"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
walkdir = "2.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
