[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "contextinator"
version = "1.2.9"
description = "Filesystem tools for AI agents with optional RAG capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "STARTHACK Team", email = "founders@starthack.io"}
]
keywords = ["ai", "filesystem", "tools", "rag", "code-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

dependencies = []

[project.optional-dependencies]
rag = [
    "tree-sitter>=0.25.0",
    "chromadb>=1.3.0",
    "openai>=2.6.0",
    "tiktoken>=0.12.0",
    "python-dotenv>=1.2.0",
    "rich>=13.0.0",
    "toon-format>=0.9.0b1",
]

server = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "maturin>=1.0",
]

all = [
    "contextinator[rag,server]",
]

[project.scripts]
contextinator = "contextinator.cli:main"

[project.urls]
Homepage = "https://github.com/starthackHQ/Contextinator"
Repository = "https://github.com/starthackHQ/Contextinator"
Issues = "https://github.com/starthackHQ/Contextinator/issues"

[tool.maturin]
python-source = "src"
module-name = "contextinator.contextinator_core"
features = ["pyo3/extension-module"]
