[package]
name = "contextinator-core"
version = "1.2.6"
edition = "2021"

[lib]
name = "contextinator_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
walkdir = "2.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.20", features = ["extension-module"] }
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.8"
